bloodc/src/parser/snapshots/bloodc__parser__tests__function_with_where_clause.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 10,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: Some(
                    TypeParams {
                        params: [
                            Type(
                                TypeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 11,
                                            end: 12,
                                            start_line: 1,
                                            start_col: 12,
                                        },
                                    },
                                    bounds: [],
                                    default: None,
                                    span: Span {
                                        start: 11,
                                        end: 12,
                                        start_line: 1,
                                        start_col: 12,
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 10,
                            end: 13,
                            start_line: 1,
                            start_col: 11,
                        },
                    },
                ),
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 3,
                                    },
                                    span: Span {
                                        start: 14,
                                        end: 15,
                                        start_line: 1,
                                        start_col: 15,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 14,
                                end: 15,
                                start_line: 1,
                                start_col: 15,
                            },
                        },
                        ty: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 2,
                                                },
                                                span: Span {
                                                    start: 17,
                                                    end: 18,
                                                    start_line: 1,
                                                    start_col: 18,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 17,
                                        end: 18,
                                        start_line: 1,
                                        start_col: 18,
                                    },
                                },
                            ),
                            span: Span {
                                start: 17,
                                end: 18,
                                start_line: 1,
                                start_col: 18,
                            },
                        },
                        span: Span {
                            start: 14,
                            end: 18,
                            start_line: 1,
                            start_col: 15,
                        },
                    },
                ],
                return_type: Some(
                    Type {
                        kind: Path(
                            TypePath {
                                segments: [
                                    TypePathSegment {
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 2,
                                            },
                                            span: Span {
                                                start: 23,
                                                end: 24,
                                                start_line: 1,
                                                start_col: 24,
                                            },
                                        },
                                        args: None,
                                    },
                                ],
                                span: Span {
                                    start: 23,
                                    end: 24,
                                    start_line: 1,
                                    start_col: 24,
                                },
                            },
                        ),
                        span: Span {
                            start: 23,
                            end: 24,
                            start_line: 1,
                            start_col: 24,
                        },
                    },
                ),
                effects: None,
                where_clause: Some(
                    WhereClause {
                        predicates: [
                            TypeBound {
                                ty: Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 2,
                                                        },
                                                        span: Span {
                                                            start: 31,
                                                            end: 32,
                                                            start_line: 1,
                                                            start_col: 32,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 31,
                                                end: 32,
                                                start_line: 1,
                                                start_col: 32,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 31,
                                        end: 32,
                                        start_line: 1,
                                        start_col: 32,
                                    },
                                },
                                bounds: [
                                    Type {
                                        kind: Path(
                                            TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 4,
                                                            },
                                                            span: Span {
                                                                start: 34,
                                                                end: 39,
                                                                start_line: 1,
                                                                start_col: 35,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 34,
                                                    end: 39,
                                                    start_line: 1,
                                                    start_col: 35,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 34,
                                            end: 39,
                                            start_line: 1,
                                            start_col: 35,
                                        },
                                    },
                                    Type {
                                        kind: Path(
                                            TypePath {
                                                segments: [
                                                    TypePathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 5,
                                                            },
                                                            span: Span {
                                                                start: 42,
                                                                end: 47,
                                                                start_line: 1,
                                                                start_col: 43,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 42,
                                                    end: 47,
                                                    start_line: 1,
                                                    start_col: 43,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 42,
                                            end: 47,
                                            start_line: 1,
                                            start_col: 43,
                                        },
                                    },
                                ],
                                span: Span {
                                    start: 31,
                                    end: 47,
                                    start_line: 1,
                                    start_col: 32,
                                },
                            },
                        ],
                        span: Span {
                            start: 25,
                            end: 47,
                            start_line: 1,
                            start_col: 26,
                        },
                    },
                ),
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: MethodCall {
                                    receiver: Expr {
                                        kind: Path(
                                            ExprPath {
                                                segments: [
                                                    ExprPathSegment {
                                                        name: Spanned {
                                                            node: SymbolU32 {
                                                                value: 3,
                                                            },
                                                            span: Span {
                                                                start: 50,
                                                                end: 51,
                                                                start_line: 1,
                                                                start_col: 51,
                                                            },
                                                        },
                                                        args: None,
                                                    },
                                                ],
                                                span: Span {
                                                    start: 50,
                                                    end: 51,
                                                    start_line: 1,
                                                    start_col: 51,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 50,
                                            end: 51,
                                            start_line: 1,
                                            start_col: 51,
                                        },
                                    },
                                    method: Spanned {
                                        node: SymbolU32 {
                                            value: 6,
                                        },
                                        span: Span {
                                            start: 52,
                                            end: 57,
                                            start_line: 1,
                                            start_col: 53,
                                        },
                                    },
                                    type_args: None,
                                    args: [],
                                },
                                span: Span {
                                    start: 50,
                                    end: 59,
                                    start_line: 1,
                                    start_col: 51,
                                },
                            },
                        ),
                        span: Span {
                            start: 48,
                            end: 61,
                            start_line: 1,
                            start_col: 49,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 61,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 61,
        start_line: 1,
        start_col: 1,
    },
}
