bloodc/src/parser/snapshots/bloodc__parser__tests__generic_effect.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Effect(
            EffectDecl {
                attrs: [],
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 8,
                        end: 13,
                        start_line: 2,
                        start_col: 8,
                    },
                },
                type_params: Some(
                    TypeParams {
                        params: [
                            Type(
                                TypeParam {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 14,
                                            end: 15,
                                            start_line: 2,
                                            start_col: 14,
                                        },
                                    },
                                    bounds: [],
                                    default: None,
                                    span: Span {
                                        start: 14,
                                        end: 15,
                                        start_line: 2,
                                        start_col: 14,
                                    },
                                },
                            ),
                        ],
                        span: Span {
                            start: 13,
                            end: 16,
                            start_line: 2,
                            start_col: 13,
                        },
                    },
                ),
                extends: [],
                operations: [
                    OperationDecl {
                        name: Spanned {
                            node: SymbolU32 {
                                value: 3,
                            },
                            span: Span {
                                start: 26,
                                end: 29,
                                start_line: 3,
                                start_col: 8,
                            },
                        },
                        type_params: None,
                        params: [],
                        return_type: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 2,
                                                },
                                                span: Span {
                                                    start: 35,
                                                    end: 36,
                                                    start_line: 3,
                                                    start_col: 17,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 35,
                                        end: 36,
                                        start_line: 3,
                                        start_col: 17,
                                    },
                                },
                            ),
                            span: Span {
                                start: 35,
                                end: 36,
                                start_line: 3,
                                start_col: 17,
                            },
                        },
                        span: Span {
                            start: 23,
                            end: 37,
                            start_line: 3,
                            start_col: 5,
                        },
                    },
                    OperationDecl {
                        name: Spanned {
                            node: SymbolU32 {
                                value: 4,
                            },
                            span: Span {
                                start: 45,
                                end: 48,
                                start_line: 4,
                                start_col: 8,
                            },
                        },
                        type_params: None,
                        params: [
                            Param {
                                qualifier: None,
                                pattern: Pattern {
                                    kind: Ident {
                                        by_ref: false,
                                        mutable: false,
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 5,
                                            },
                                            span: Span {
                                                start: 49,
                                                end: 50,
                                                start_line: 4,
                                                start_col: 12,
                                            },
                                        },
                                        subpattern: None,
                                    },
                                    span: Span {
                                        start: 49,
                                        end: 50,
                                        start_line: 4,
                                        start_col: 12,
                                    },
                                },
                                ty: Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 2,
                                                        },
                                                        span: Span {
                                                            start: 52,
                                                            end: 53,
                                                            start_line: 4,
                                                            start_col: 15,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 52,
                                                end: 53,
                                                start_line: 4,
                                                start_col: 15,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 52,
                                        end: 53,
                                        start_line: 4,
                                        start_col: 15,
                                    },
                                },
                                span: Span {
                                    start: 49,
                                    end: 53,
                                    start_line: 4,
                                    start_col: 12,
                                },
                            },
                        ],
                        return_type: Type {
                            kind: Path(
                                TypePath {
                                    segments: [
                                        TypePathSegment {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 6,
                                                },
                                                span: Span {
                                                    start: 58,
                                                    end: 62,
                                                    start_line: 4,
                                                    start_col: 21,
                                                },
                                            },
                                            args: None,
                                        },
                                    ],
                                    span: Span {
                                        start: 58,
                                        end: 62,
                                        start_line: 4,
                                        start_col: 21,
                                    },
                                },
                            ),
                            span: Span {
                                start: 58,
                                end: 62,
                                start_line: 4,
                                start_col: 21,
                            },
                        },
                        span: Span {
                            start: 42,
                            end: 63,
                            start_line: 4,
                            start_col: 5,
                        },
                    },
                ],
                span: Span {
                    start: 1,
                    end: 65,
                    start_line: 2,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 65,
        start_line: 2,
        start_col: 1,
    },
}
